Modify showUser() => User

--- a/user.html
+++ b/user.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <script>
-function showUser(str) {
+function User(str) {
   if (str=="") {
     document.getElementById("txtHint").innerHTML="";
     return;
